moificaçoes no about us

--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
             <div class="slidearea">
             <h1>Desing is About <br><span> Comunication</span></h1>
             <h2>call Us : +00 01234 5678</h2>
-            <a href="">Get in Touch!</a>
+            <a class="button" href="">Get in Touch!</a>
             </div>
         </div>
         <div class="slide">
@@ -71,7 +71,16 @@
   <div class="section-title">About Us!</div>
   <div class="section-desc">Who we Are</div>
   <div class="section-body">
-    ...
+    <div class="section-aboutus">
+     <div class="section-aboutus--left">
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita eaque tempore, quis ratione exercitationem atque qui excepturi quas iure ut nemo deserunt, obcaecati aut repellendus alias consequatur odio neque velit. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui, repellat. Libero odio atque nisi dolorum dicta molestiae alias quae eveniet iste repudiandae nulla, minima, unde illum suscipit expedita vitae tenetur?</p>
+         <br>
+         <a class="button" href="">Learn More</a>
+     </div>
+     <div class="section-aboutus--right">
+         <img src="assets/images/foto9.jpg" alt="">
+     </div>
+    </div>
 </div>
 </section>
 
