--- a/home.html
+++ b/home.html
@@ -85,10 +85,31 @@
 </section>
 
 <section class="default dark">
-    <div class="section-title">Título de exemplo</div>
-    <div class="section-desc">Descrição bem legal</div>
+    <div class="section-title">Services</div>
+    <div class="section-desc">Services that we provide</div>
     <div class="section-body">
-      ...
+      <div class="section-services">
+          <div class="section-service">
+              <img src="media/medalha.png" alt="">
+              <h4>High Quality Desing</h4>
+              <p> beautiful people Brazil </p>
+            </div>
+          <div class="section-service">
+            <img src="media/estrela.png" alt="">
+            <h4>Modern Design </h4>
+            <p> beautiful people Brazil more people </p>
+          </div>
+          <div class="section-service">
+            <img src="media/relogio.png" alt="">
+            <h4>Regular Updates</h4>
+            <p> beautiful people Brazil </p>
+          </div>
+          <div class="section-service">
+            <img src="media/balao.png" alt="">
+            <h4>Fast and free support</h4>
+            <p> beautiful people Brazil more than spanish </p>
+          </div>
+      </div>
   </div>
   </section>
     </main>
