--- a/home.html
+++ b/home.html
@@ -112,6 +112,25 @@
       </div>
   </div>
   </section>
+
+
+  <section class="default light">
+    <div class="section-title">Our Projects!</div>
+    <div class="section-desc">What are Create </div>
+    <div class="section-body">
+      <div class="section-ptojects">
+      <div class="section-projects--filters">
+          <ul>
+              <li>All</li>
+              <li class="active">Photos</li>
+              <li>Branding</li>
+              <li>adverts</li>
+              <li>Misc</li>
+          </ul>
+      </div>
+      </div>
+  </div>
+  </section>
     </main>
     <footer>
 
