--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/Css/style1.css">
     <link rel="stylesheet" href="assets/Css/default.css">
+    <link rel="stylesheet" href="assets/Css/our-team.css">
     <title>Projeto Awax</title>
 </head>
 <body>
@@ -243,6 +244,37 @@
       </div>
       <a href="#" class="button-22">More Projects</a>
     </div>
+  </div>
+  </section>
+
+
+
+  <section class="default dark">
+    <div class="section-title">Our Team</div>
+    <div class="section-desc">Services that we provide</div>
+    <div class="section-body">
+      <div class="section-services">
+          <div class="section-service">
+              <img src="media/medalha.png" alt="">
+              <h4>High Quality Desing</h4>
+              <p> beautiful people Brazil </p>
+            </div>
+          <div class="section-service">
+            <img src="media/estrela.png" alt="">
+            <h4>Modern Design </h4>
+            <p> beautiful people Brazil more people </p>
+          </div>
+          <div class="section-service">
+            <img src="media/relogio.png" alt="">
+            <h4>Regular Updates</h4>
+            <p> beautiful people Brazil </p>
+          </div>
+          <div class="section-service">
+            <img src="media/balao.png" alt="">
+            <h4>Fast and free support</h4>
+            <p> beautiful people Brazil more than spanish </p>
+          </div>
+      </div>
   </div>
   </section>
     </main>
