--- a/home.html
+++ b/home.html
@@ -249,33 +249,16 @@
 
 
 
-  <section class="default dark">
+  <section class="default dark bg-team">
+    <div class="section-team-area">
     <div class="section-title">Our Team</div>
-    <div class="section-desc">Services that we provide</div>
+    <div class="section-desc">Our Co-Workers</div>
     <div class="section-body">
-      <div class="section-services">
-          <div class="section-service">
-              <img src="media/medalha.png" alt="">
-              <h4>High Quality Desing</h4>
-              <p> beautiful people Brazil </p>
-            </div>
-          <div class="section-service">
-            <img src="media/estrela.png" alt="">
-            <h4>Modern Design </h4>
-            <p> beautiful people Brazil more people </p>
-          </div>
-          <div class="section-service">
-            <img src="media/relogio.png" alt="">
-            <h4>Regular Updates</h4>
-            <p> beautiful people Brazil </p>
-          </div>
-          <div class="section-service">
-            <img src="media/balao.png" alt="">
-            <h4>Fast and free support</h4>
-            <p> beautiful people Brazil more than spanish </p>
-          </div>
+      <div class="section-team">
+         ...
       </div>
   </div>
+</div>
   </section>
     </main>
     <footer>
