--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
     </header>
     <main>
     <section class="banner">
-    <div class="sliders">
+    <div class="sliders" style="margin-left: 0;">
         <div class="slide">
             <div class="slidearea">
             <h1>Desing is About <br><span> Comunication</span></h1>
@@ -254,11 +254,9 @@
     <div class="section-title">Our Team</div>
     <div class="section-desc">Our Co-Workers</div>
     <div class="section-body">
-      <div class="section-team">
-         ...
-      </div>
-  </div>
-</div>
+    <div class="section-team">
+        
+                                                                  </div>
   </section>
     </main>
     <footer>
