--- a/home.html
+++ b/home.html
@@ -274,7 +274,11 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="sliders-pointers">
+                <div class="pointer active"></div>
+                <div class="pointer"></div>
+                <div class="pointer"></div>
+            </div>
             </div>  
             
         </div> 
