--- a/home.html
+++ b/home.html
@@ -347,6 +347,40 @@
             </div>
 
         </section>
+
+        <section class="default section-products">
+                <div class="section-body">
+                    <div class="products-area">
+                        <div class="products"><img src="media/empresa1.png" alt=""></div>
+                        <div class="products"><img src="media/empresa2.png" alt=""></div>
+                        <div class="products"><img src="media/empresa3.png" alt=""></div>
+                        <div class="products"><img src="media/empresa4.png" alt=""></div>
+                        <div class="products"><img src="media/empresa5.png" alt=""></div>
+                        <div class="products"><img src="media/empresa6.png" alt=""></div>
+                    </div>
+
+                </div>
+
+        </section>
+
+
+        <section class="default light " >
+            <div class="section-title">Price</div>
+            <div class="section-desc">Pricing Table </div>
+            <div class="section-body">
+                <div class="price-area">
+                    <div class="price-area-express"></div>
+                    <div class="price-area-express"></div>
+                    <div class="price-area-express"></div>
+                    <div class="price-area-express"></div>
+                </div>
+
+            </div>
+
+
+
+
+        </section>
     </main>
     <footer>
 
