--- a/home.html
+++ b/home.html
@@ -364,15 +364,52 @@
         </section>
 
 
-        <section class="default light " >
+        <section class="default light price-light " >
             <div class="section-title">Price</div>
             <div class="section-desc">Pricing Table </div>
             <div class="section-body">
                 <div class="price-area">
-                    <div class="price-area-express"></div>
-                    <div class="price-area-express"></div>
-                    <div class="price-area-express"></div>
-                    <div class="price-area-express"></div>
+                    <div class="price-table-area">
+                     <div class="price-express">Express</div>
+                     <div class="price-value">$ 9.99</div>
+                     <div class="price-month">/Month</div>
+                     <div class="price-item-point">Tracking issues <br> --</div>
+                     <div class="price-item-point">Tracking issues <br> --</div>
+                     <div class="price-item-point">Tracking issues <br> --</div>
+                     <div class="price-item-point">Tracking issues <br> --</div>
+                     <a class="button-dark" href="#">Choose</a>
+                    </div>
+                    <div class="price-table-area">
+                        <div class="price-express">Express</div>
+                        <div class="price-value">$ 9.99</div>
+                        <div class="price-month">/Month</div>
+                        <div class="price-item-point">Tracking issues <br> --</div>
+                        <div class="price-item-point">Tracking issues <br> --</div>
+                        <div class="price-item-point">Tracking issues <br> --</div>
+                        <div class="price-item-point">Tracking issues <br> --</div>
+                        <a class="button-dark" href="#">Choose</a>
+                    </div>
+                    <div class="price-table-area">
+                        <div class="price-express">Express</div>
+                        <div class="price-value">$ 9.99</div>
+                        <div class="price-month">/Month</div>
+                        <div class="price-item-point">Tracking issues <br> --</div>
+                        <div class="price-item-point">Tracking issues <br> --</div>
+                        <div class="price-item-point">Tracking issues <br> --</div>
+                        <div class="price-item-point">Tracking issues <br> --</div>
+                        <a class="button-dark" href="#">Choose</a>
+                    </div>
+                    <div class="price-table-area">
+                        <div class="price-express">Express</div>
+                        <div class="price-value">$ 9.99</div>
+                        <div class="price-month">/Month</div>
+                        <div class="price-item-point">Tracking issues <br> --</div>
+                        <div class="price-item-point">Tracking issues <br> --</div>
+                        <div class="price-item-point">Tracking issues <br> --</div>
+                        <div class="price-item-point">Tracking issues <br> --</div>
+                        <a class="button-dark" href="#">Choose</a>
+
+                    </div>
                 </div>
 
             </div>
