--- a/home.html
+++ b/home.html
@@ -418,6 +418,62 @@
 
 
         </section>
+
+
+        <section class="default light premium">
+            <div class="section-title">Premium</div>
+            <div class="section-desc"> EVEN MORE FEATURES AVAILABLE</div>
+            <div class="section-body">
+                <div class="section-premium">
+                    <div class="sliders" style="margin-left:0;">
+                        <div class="slide">
+                    <div class="slidearea">
+                        <div class="section-premium-left" >
+                                   <img class="" src="media/livros.png" ></div>
+                            
+                        <div class="section-premium-right">
+                                <div class="premium-item">
+                                    <img src="media/check.png" alt="">
+                                    <div>
+                                        <h4>FIRST FEATURE</h4>
+                                        
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat  condimentum viverra a nec lacus.
+                                        <br>
+                                        -- FEATURE ONE
+                                        <br>
+                                       -- FEATURE TWO
+                                         <br>
+                                       -- FEATURE THREE
+                                    </div>
+                                </div>
+                                <div class="premium-item">
+                                    <img src="media/check.png" alt="">
+                                    <div>
+                                        <h4>SECOND FEATURE</h4>
+                                        <br>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat <br> condimentum viverra a nec lacus.
+                                    </div>
+                                </div>
+                                <div class="premium-item">
+                                    <img src="media/check.png" alt="">
+                                    <div>
+                                        <h4>THIRD FEATUR</h4>
+                                        <br>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel <br> eros vitae erat condimentum viverra a nec lacus.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+          <div class="sliders-pointers">
+              <div class="pointer active"></div>
+              <div class="pointer"></div>
+              <div class="pointer"></div>
+          </div>
+            </div>
+        </section>
     </main>
     <footer>
 
