--- a/home.html
+++ b/home.html
@@ -567,7 +567,49 @@
 
 </div>
 
-    </section>
+</section>
+
+<section class="section-map">
+    <div class="section-map--area">
+        <div class="section-map--info">
+            <div class="section-map--info-item">
+                <div class="section-map--info-item-img">
+                    <img src="media/carta.png" alt="">
+                </div>
+
+             Endereço completão que irá ter algum tamanho
+            </div>
+            <div class="section-map--info-item">
+                <div class="section-map--info-item-img">
+                    <img src="media/localizacao.png" alt="">
+                </div>
+
+             Endereço completão que irá ter algum tamanho
+            </div>
+            <div class="section-map--info-item">
+                <div class="section-map--info-item-img">
+                    <img src="media/telefone.png" alt="">
+                </div>
+
+             Endereço completão que irá ter algum tamanho
+            </div>
+            <div class="section-map--info-item">
+                <div class="section-map--info-item-img">
+                    <img src="media/arroba.png" alt="">
+                </div>
+
+             Endereço completão que irá ter algum tamanho
+            </div>
+            <div class="section-map--info-item">
+                <div class="section-map--info-item-img">
+                    <img src="media/web.png" alt="">
+                </div>
+
+             Endereço completão que irá ter algum tamanho
+            </div>
+        </div>
+    </div>
+</section>
     </main>
     <footer>
 
