--- a/home.html
+++ b/home.html
@@ -612,7 +612,26 @@
 </section>
     </main>
     <footer>
-
+<div class="footer-area">
+    <div class="footer-area1">
+        <div class="footer-social">
+            <a href=""><img src="media/twitter.png" alt=""></a>
+            <a href=""><img src="media/linkedin.png" alt=""></a>
+            <a href=""><img src="media/facebook.png" alt=""></a>
+            <a href=""><img src="media/googleplus.png" alt=""></a>
+            <a href=""><img src="media/pinterest.png" alt=""></a>
+        </div>
+    </div>
+    <div class="footer-area2">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla ipsa modi quae accusantium, voluptatem animi nobis asperiores delectus illum voluptas dolore adipisci dignissimos possimus, commodi mollitia a numquam blanditiis laudantium!
+    </div>
+    <div class="footer-area3">
+        <form method="POST">
+            <input type="email" name="email" placeholder="EMAIL TO SUBSCRIBE">
+            <button class="button">SUBSCRIBE</button>
+        </form>
+    </div>
+</div>
     </footer>
 </body>
 
