--- a/home.html
+++ b/home.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/Css/style1.css">
     <link rel="stylesheet" href="assets/Css/default.css">
     <link rel="stylesheet" href="assets/Css/our-team.css">
+    <link rel="stylesheet" href="assets/Css/media.css">
     <link rel="shortcut icon" href="media/estrela.png" type="image/x-icon">
     <title>Projeto Awax</title>
 </head>
