--- a/home.html
+++ b/home.html
@@ -23,6 +23,7 @@
                 </div>
             </div>
             <div class="menu">
+                <img class="menu-opener" src="media/menu.png"/>
                 <nav>
                     <ul>
                         <li class="active"><a href="#">Home</a></li>
