--- a/home.html
+++ b/home.html
@@ -135,7 +135,9 @@
                             <li class="active">Photos</li>
                             <li>Branding</li>
                             <li>adverts</li>
+                            <li>Development</li>
                             <li>Misc</li>
+
                         </ul>
                     </div>
                     <div class="section-projects--photos">
@@ -431,7 +433,7 @@
                         <div class="slide">
                     <div class="slidearea">
                         <div class="section-premium-left" >
-                                   <img class="" src="media/livros.png" ></div>
+                                   <img class="livro" src="media/livros.png" ></div>
                             
                         <div class="section-premium-right">
                                 <div class="premium-item">
