--- a/home.html
+++ b/home.html
@@ -617,8 +617,8 @@
     </main>
     <footer>
 <div class="footer-area">
-    <div class="footer-area1">
-        <div class="footer-social">
+    <div class="footer-areas item1">
+        <div class="footer-social ">
             <a href=""><img src="media/twitter.png" alt=""></a>
             <a href=""><img src="media/linkedin.png" alt=""></a>
             <a href=""><img src="media/facebook.png" alt=""></a>
@@ -626,10 +626,10 @@
             <a href=""><img src="media/pinterest.png" alt=""></a>
         </div>
     </div>
-    <div class="footer-area2">
+    <div class="footer-areas item2">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla ipsa modi quae accusantium, voluptatem animi nobis asperiores delectus illum voluptas dolore adipisci dignissimos possimus, commodi mollitia a numquam blanditiis laudantium!
     </div>
-    <div class="footer-area3">
+    <div class="footer-areas item3">
         <form method="POST">
             <input type="email" name="email" placeholder="EMAIL TO SUBSCRIBE">
             <button class="button">SUBSCRIBE</button>
