--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 
                 </div>
             </div>
-            <div class="menu">
+            <div class="menu" onclick="oppened()">
                 <img class="menu-opener" src="media/menu.png"/>
                 <nav>
                     <ul>
@@ -128,7 +128,7 @@
             <div class="section-title">Our Projects!</div>
             <div class="section-desc">What are Create </div>
             <div class="section-body">
-                <div class="section-ptojects">
+                <div class="section-projects">
                     <div class="section-projects--filters">
                         <ul>
                             <li>All</li>
@@ -638,5 +638,5 @@
 </div>
     </footer>
 </body>
-
+<script src="menu.js"></script>
 </html>
