--- a/home.html
+++ b/home.html
@@ -253,7 +253,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="#" class="button-22">More Projects</a>
+                    <a href="#" class="button">More Projects</a>
                 </div>
             </div>
         </section>
